--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script type="module"></script>
 </head>
 <body>
-    
+    <header>
+        <div class=""></div>
+        <div class="">
+            
+        </div>
+    </header>
 </body>
 </html>
