Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <header>
-        <div class=""></div>
+        <div class="logo"><h1>Crowfunding Platform</h1></div>
         <div class="">
-            
+            <button class=""></button>
+            <button class=""></button>
+            <button class=""></button>
+            <button class=""></button>
+            <button class=""></button>
         </div>
     </header>
 </body>
