login signup funcationally work

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crowfuning Platform </title>
-    <link href="css/style.css" rel="stylesheet">
-    <script type="module" src="js/auth.js"></script>
+    <title>Dashboard || User </title>
+    <script type="module" src="js/checkauth.js"></script>
 </head>
 <body>
     <header>
@@ -13,7 +12,12 @@
         <div class="navbar">
             <button class="">Home</button>
             <button class="lgn_btn"><a href="login.html">Login</a></button>
+            <button id="logout_btn">Logout</button>
         </div>
     </header>
+    <main id="container">
+        
+    </main>
+    
 </body>
 </html>
